// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox add className 1`] = `
<input
  checked={false}
  className="emotion-0 foo"
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`Checkbox checked 1`] = `
<input
  checked={true}
  className="emotion-0"
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`Checkbox empty 1`] = `
<input
  checked={false}
  className="emotion-0"
  onChange={[Function]}
  type="checkbox"
/>
`;
